--- a/src/main/resources/templates/_footer.html
+++ b/src/main/resources/templates/_footer.html
@@ -1,7 +1,7 @@
 <div class="footer-container" xmlns:th="http://www.thymeleaf.org">
   
-   @Copy right <a href="//o7planning.org" target="_blank">o7planning.org</a>
+   @Copy right <a href="https://github.com/divya-somashekar" target="_blank">divya somashekar</a>
    <br>
-   See more <a>demo</a>
+   See more divya<a>demo</a>
      
 </div>
